--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,6 @@ body{
 }
 
 .img{
-    background-image: url("images/image-product-desktop.jpg");
     object-fit: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -129,9 +128,9 @@ body{
         border-radius: 20px 20px 0 0;
     }
 
-    .img{
+    img{
         border-radius: 20px 20px 0 0;
-        background-image: url("images/image-product-mobile.jpg");
+        content: url("/images/image-product-mobile.jpg");
     }
 
     .sec2{
@@ -166,3 +165,4 @@ body{
         font-size: 1rem;
     }
 }
+/*$(".img").attr("src","/images/image-product-mobile.jpg");*/
