--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,10 @@ body{
     border-radius: 20px 0 0 20px;
 }
 
+.img2{
+    display: none;
+}
+
 .sec2{
     width: 50%;
     border-radius: 0 20px 20px 0;
@@ -128,9 +132,19 @@ body{
         border-radius: 20px 20px 0 0;
     }
 
-    img{
+    .img{
+        display: none;
+    }
+
+    .img2{
+        display: initial;
         border-radius: 20px 20px 0 0;
-        content: url("/images/image-product-mobile.jpg");
+        object-fit: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        width:100%;
+        height:100%;
     }
 
     .sec2{
@@ -165,4 +179,3 @@ body{
         font-size: 1rem;
     }
 }
-/*$(".img").attr("src","/images/image-product-mobile.jpg");*/
